kubernetes/home/foundation/traefik/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
    app.kubernetes.io/service: traefik-dashboard
spec:
  ports:
    - name: dashboard
      port: 9000
      protocol: TCP
      targetPort: 9000
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/icon: simple-icons:traefikproxy
    hajimari.io/group: foundation
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-trustednetworks-ipwhitelist@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
    probe: enabled
  name: traefik
  namespace: kube-system
spec:
  rules:
    - host: traefik.kubi.${DOMAIN_LOCAL}
      http:
        paths:
          - backend:
              service:
                name: traefik-dashboard
                port:
                  number: 9000
            path: /
            pathType: Prefix
